2002-02-06  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* aux/macros/check_field.m4: include a fixed version of
	AC_CHECK_MEMBER.  g/cc will fail to check a member if the .member
	is itself a data structure, because you cannot compare, in C, a
	data structure against NULL; you can compare a native data type
	(int, char) or a pointer.  Solution: do what I did in my original
	member checking macro: try to take the address of the member.  You
	can always take the address of anything.

2002-01-31  Erez Zadok  <ezk@localhost.localdomain>

	* remove old '%W%' SCCS IDs from all sources.

2002-01-21  Ion Badulescu  <ionut@moisil.badula.org>

	* conf/mount/mount_linux.c (mount_linux): fix breakage introduced
	by the loop device mount support. Linux mount takes a real string
	as the last argument, unless the mount type is NFS, NCP, or SMB.

2002-01-20  Erez Zadok  <ezk@localhost.localdomain>

	* hlfsd/hlfsd.h (HLFSD_VERSION): up version of hlfsd to 1.2,
	because we made some important changes.

2002-01-20  Ion Badulescu  <lionut@gonzales.badula.org>

	* include/am_utils.h (D_ALL): do not include D_MTAB and D_HRTIME
	by default

	* NEWS: document latest changes

	* amd/map.c (unmount_mp): same fix as for hlfsd, update the
	seconds field in mtime because Linux ignores the useconds field

	* hlfsd/homedir.c: made some global vars static
	(plt_init): remove all trailing '/' chars from root's home;
	use root's home, not the username (silly bugfix)

2002-01-20  Ion Badulescu  <lionut@gonzales.badula.org>

	* hlfsd/homedir.c (homedir): don't special case uid 0 as having /
	as home; instead use the root account's home
	(plt_init): properly initialize root_home from the root account's
	home directory, or as "" if root doesn't exist
	(plt_reset): free root_home

2002-01-20  Erez Zadok  <ezk@localhost.localdomain>

	* hlfsd/stubs.c (nfsproc_{lookup,getattr}_2_svc): non-SYMTTL code.
	Increment seconds, not microseconds (which are ignored by NFS).
	Set symlink owner to euid.
